syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.demo.grpc.generated";
option java_outer_classname = "DemoProto";

package demo;

// Service definition for performance testing
service PerformanceTestService {
  // Single request-response for testing
  rpc ProcessData(DataRequest) returns (DataResponse);
  
  // Streaming for high-throughput testing
  rpc ProcessDataStream(stream DataRequest) returns (stream DataResponse);
}

// Request message with configurable payload size
message DataRequest {
  string id = 1;
  int64 timestamp = 2;
  bytes payload = 3;  // Variable size payload for testing
  map<string, string> metadata = 4;
}

// Response message with configurable payload size
message DataResponse {
  string id = 1;
  int64 timestamp = 2;
  bytes payload = 3;  // Variable size payload for testing
  int32 status_code = 4;
  string message = 5;
  map<string, string> metadata = 6;
  int64 processing_time_ns = 7;  // Server processing time in nanoseconds
}

